--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "ausafahmad",
   "homepage": "https://Ausaf1.github.io/ausafahmad",
   "version": "0.1.0",
   "private": true,
